# infrarely

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: api_reference.md  architecture.md  concepts.md  multi_agent.md  observability.md  quickstart.md  runtime.md  security_model.md  verification.md  vision.md
docs/migration/: from_autogpt.md  from_crewai.md  from_langchain.md
examples/: async_demo.py  context_window_demo.py  evaluation_demo.py  hello_agent.py  hitl_approval.py  integration_demo.py  production_deploy.py  research_team.py  security_demo.py  streaming_demo.py  study_assistant.py  validation_demo.py  versioning_demo.py  weather_agent.py
infrarely/: __init__.py  __main__.py
infrarely/agent/: __init__.py  capability.py  capability_compiler.py  capability_executor.py  capability_graph.py  capability_resolver.py  context_builder.py  error_recovery.py  execution_depth.py  execution_trace.py  graph.py  knowledge_layer.py  llm_client.py  nodes.py  permission_policy.py  pipeline.py  planning_engine.py  reasoning_engine.py  response_formatter.py  scheduler.py  state.py  state_machine.py  tool_sandbox.py  tool_validator.py  verification.py  workflow.py
infrarely/capabilities/: __init__.py  registry.py  student_capabilities.py
infrarely/cli/: __init__.py  cli.py
infrarely/core/: __init__.py  agent.py  app_config.py  config.py  context.py  decorators.py  events.py  result.py  streaming.py
infrarely/integrations/: __init__.py  github.py  gmail.py  notion.py  postgres.py  rest_api.py  slack.py  webhook.py
infrarely/internal/: __init__.py  bridge.py  knowledge_bridge.py  plan_bridge.py  state_bridge.py
infrarely/learning/: __init__.py  architecture_optimizer.py  capability_evolution.py  evolution_memory.py  experimentation_engine.py  failure_intelligence.py  performance_intelligence.py  policy_guard.py  verification_layer.py
infrarely/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  openai_provider.py  registry.py
infrarely/memory/: __init__.py  advance_memory.py  knowledge.py  long_term.py  memory.py  memory_manager.py  structured.py  working.py
infrarely/observability/: __init__.py  dashboard.py  logger.py  (+3 more)
tests/: conftest.py  test_beginner.py  test_config.py  test_errors.py  test_knowledge.py  test_memory.py  test_multi_agent.py  test_observability.py  test_tools.py  test_workflow.py
(+63 files in other folders)
